...
            app:layout_scrollFlags="scroll|snap">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_view"
                    android:theme="@style/Theme.MoviiCat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:queryHint="@string/search_hint"
                    android:iconifiedByDefault="true"
                    android:layout_marginStart="@dimen/space_normal"
                    android:layout_marginEnd="@dimen/space_normal" />
                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    style="@style/TabLayoutStyle"
                    android:layout_marginTop="0dp"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="pin" />
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
...
