<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:title="@string/title_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_search"
        android:title="@string/title_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_favorite"
        android:title="@string/title_favorite"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="ifRoom"/>
</menu>